Fixed alignment on Sign in prompt for collection tab

--- a/src/app/collection-tab/collection-tab.component.css
+++ b/src/app/collection-tab/collection-tab.component.css
@@ -159,7 +159,7 @@ position: absolute;
   -webkit-transform: translate(-50%,-50%);
       -ms-transform: translate(-50%,-50%);
           transform: translate(-50%,-50%);
-  top: 50%;
+  top: 40%;
   left: 50%;
 
 }
